<resources>
    <string name="app_name">阿狸阿猫</string>
    <string name="new_friend">新的好友</string>
    <string name="group_chat">群聊</string>
    <string name="official_user">狸猫官方账号</string>
    <string name="appointment_invitation">手机联系人</string>
    <string name="action_settings">Settings</string>
    <string name="text_bf_num" formatted="false">%s次播放</string>
    <string name="textfans_num" formatted="false">%s粉丝</string>
    <string name="home_title_nearby">精选</string>
    <string name="text_dynamic_retransmission">转发</string>
    <string name="text_dynamic_praise">点赞</string>
    <string name="text_dynamic_appraise">评价</string>
    <string name="text_dynamic_read">阅读</string>
    <string name="home_title_addr">通讯录</string>
    <string name="home_title_search">搜索</string>
    <string name="home_title_find">发现</string>
    <string name="text_delete">删除</string>
    <string name="text_retrans">转发</string>
    <string name="text_zero">评论</string>
    <string name="home_title_my">我的</string>
    <string name="nearby_title_dt">动态</string>
    <string name="nearby_title_r">人</string>
    <string name="nearby_title_ht">资源库</string>
    <string name="new_dynamic_title_name">微拍</string>
    <string name="dr_fj">附近</string>
    <string name="dr_xr">新锐</string>
    <string name="dr_rm">热门</string>
    <string name="hot_dynamic_title_name">影视</string>
    <string name="friends_title_name">圈子</string>
    <string name="search_title_right_confirm">搜索</string>
    <string name="search_title_hint_content">输入关键词</string>
    <string name="name_hljy">婚恋交友</string>
    <string name="name_nmqz">圈子</string>
    <string name="name_hd">活动</string>
    <string name="title_name_cancel">取消</string>
    <string name="title_name_edit">编辑</string>
    <string name="title_name_conserve">保存</string>
    <string name="name_tjyy">推荐应用</string>
    <string name="name_tj">推荐</string>
    <string name="str_trytry">试一试</string>
    <string name="loading">正在加载……</string>
    <string name="text_video_phone">图片/视频</string>
    <string name="str_tag">人使用过</string>
    <string name="second">15</string>
    <string name="text_btu_more">更多</string>
    <string name="search_chile_title_hotsearch">热门搜索</string>
    <string name="search_chile_title_ssjl">搜索记录</string>
    <string name="search_chile_title_qksj">清空数据</string>
    <string name="search_chile_title_yytj">应用推荐</string>
    <string name="no_date">没有更多数据</string>
    <string name="text_updata">更新至</string>
    <string name="text_up_num">--集</string>
    <string name="text_tv_direct">导演:--</string>
    <string name="text_tv_lead_role">主演:--</string>
    <string name="text_tv_type">类型:--</string>
    <string name="play_credits_now">立即播放</string>
    <string name="see_details">查看详情</string>
    <string name="text_select_num">选集</string>
    <string name="text_issmval">认证</string>
    <string name="text_null">----</string>
    <string name="action_init_data">这个地方暂时没有内容所以不显示</string>
    <string name="title_name_shield_ta">屏蔽TA</string>
    <string name="text_is_delete">是否确定删除 ?_?</string>
    <string name="text_dialog_btn_ok">确定</string>
    <string name="text_dialog_btn_no">取消</string>
    <string name="text_cryptonym">匿名</string>
    <string name="text_real_name">实名</string>
    <string name="text_tag">标签</string>
    <string name="text_press_speak">按下  说话</string>
    <string name="text_publish_dynamic">发布动态</string>
    <string name="text_retrabs_dynamic">转发动态</string>
    <string name="text_album_name">图片/拍照</string>
    <string name="text_camera_name">短视频</string>
    <string name="text_jubao_name">举报</string>
    <string name="text_siliao_name">添加好友</string>
    <string name="text_is_crytonym_name">是否切换匿名状态?</string>
    <string name="text_is_real_name">是否切换实名状态?</string>
    <string name="text_biaoqing">表情</string>
    <string name="Send_the_following_pictures">可以发生一张图片吗？</string>
    <string name="text_voice">语音</string>
    <string name="text_video">视频</string>
    <string name="text_voice_hite">说出这一刻的想法</string>
    <string name="text_text_hite">记录这一刻的故事</string>
    <string name="text_duration"> "</string>
    <string name="tag_hite_text">最多可添加5个标签……</string>
    <string name="tag_title_text">通过点击一下选择标签:</string>
    <string name="tv_btn_tag">换一下</string>
    <string name="item_ht_title_name">更多话题</string>
    <string name="item_ht_title_name_jctj">精彩推荐</string>
    <string name="text_km">km</string>
    <string name="text_no_data">没有更多数据了……</string>
    <string name="hljy_bottom_title_name">兴趣相同的TA</string>
    <string name="hljy_right_spyh">速配约会</string>
    <string name="hljy_left_yjzq">一键钟情</string>
    <string name="text_spyh_btn_ok">发布</string>
    <string name="text_spyh_list_title_name">约会公告</string>
    <string name="find_yjzq_fbxx_title">发布消息</string>
    <string name="find_yjzq_fj_title">附近</string>
    <string name="find_hljy_rmgg_title">热门公告</string>
    <string name="find_hljy_hyTa_btn">回应Ta</string>
    <string name="find_hljy_hl_btn">忽略</string>
    <string name="find_hljy_xhTa_title">邂逅Ta</string>
    <string name="find_hljy_ggxq_btn_fb">发表</string>
    <string name="text_hite">敬请期待……</string>
    <string name="receive_the_passthrough">Receive cmd message : action：</string>
    <string name="location_recv">[%1$s location]</string>
    <string name="location_prefix">[my location]</string>
    <string name="picture">[Picture]</string>
    <string name="voice">Voice</string>
    <string name="video">[Video]</string>
    <string name="voice_call">[Voice call]</string>
    <string name="file">[file]</string>
    <string name="call_duration">call duration</string>
    <string name="Refused">Refused</string>
    <string name="The_other_party_has_refused_to">Call was refused</string>
    <string name="The_other_is_not_online">The peer is not online</string>
    <string name="The_other_is_on_the_phone">The peer is on the phone</string>
    <string name="The_other_party_did_not_answer">The peer did not answer</string>
    <string name="did_not_answer">did not answer</string>
    <string name="Has_been_cancelled">Cancelled</string>
    <string name="mute">静音</string>
    <string name="Hands_free">免提</string>
    <string name="hang_up">挂断</string>
    <string name="answer">接听</string>
    <string name="unable_to_connect">不能连接到服务器</string>
    <string name="Are_connected_to_each_other">Connecting to peer..</string>
    <string name="Is_not_yet_connected_to_the_server">Not connect to server</string>
    <string name="have_connected_with">Connected to the peer and waiting for the peer to accept</string>
    <string name="direct_call">Direct</string>
    <string name="relay_call">Relay</string>
    <string name="In_the_call">In the call..</string>
    <string name="The_other_party_refused_to_accept">The call was refused</string>
    <string name="Connection_failure">Connection failed!</string>
    <string name="The_other_party_is_not_online">The peer is not online now, please try later</string>
    <string name="The_other_is_on_the_phone_please">The peer is busy now, please try later</string>
    <string name="The_other_is_hang_up">The peer has ended the call</string>
    <string name="The_other_party_did_not_answer_new">The peer did not answer</string>
    <string name="hanging_up">Hanging up..</string>
    <string name="text_ack_msg">Read</string>
    <string name="text_delivered_msg">Delivered</string>
    <string name="button_pushtotalk">Hold to talk</string>
    <string name="button_send">Send</string>
    <string name="attach_take_pic">Capture</string>
    <string name="attach_picture">Image</string>
    <string name="attach_location">Location</string>
    <string name="attach_video">Video</string>
    <string name="attach_file">File</string>
    <string name="attach_voice_call">Voice call</string>
    <string name="attach_video_call">Video call</string>
    <string name="move_up_to_cancel">Finger up to cancel sending</string>
    <string name="not_download">Did not download:</string>
    <string name="confirm_resend">Confirm to resend？</string>
    <string name="resend">Resend</string>
    <string name="Into_the_blacklist">Move to the blacklist?</string>
    <string name="title_user_profile">User Profile</string>
    <string name="nickname">nickname</string>
    <string name="setting_nickname">Setting nickname</string>
    <string name="dl_ok">OK</string>
    <string name="toast_nick_not_isnull">nick cannot be empty!</string>
    <string name="dl_cancel">Cancel</string>
    <string name="dl_title_upload_photo">Upload Photo</string>
    <string name="dl_msg_take_photo">Task Photo</string>
    <string name="dl_msg_local_upload">Local Upload</string>
    <string name="toast_no_support">No Support!</string>
    <string name="dl_update_nick">update nickname</string>
    <string name="dl_update_photo">update photo</string>
    <string name="dl_waiting">waiting...</string>
    <string name="toast_updatenick_success">update nickname success!</string>
    <string name="toast_updatenick_fail">update nickname fail!</string>
    <string name="toast_updatephoto_success">update photo success!</string>
    <string name="toast_updatephoto_fail">update photo fail!</string>
    <string name="send_fail">Send failed</string>
    <string name="connect_failuer_toast">Please check the network or try again later</string>
    <string name="Is_download_voice_click_later">Downloading the voice message, click later</string>
    <string name="downwaiting">Downloading the file, please try again later</string>
    <string name="Failed_to_download_file">Failed to download file:</string>
    <string name="Have_downloaded">Already downloaded</string>
    <string name="Did_not_download">Not yet downloaded</string>
    <string name="error_send_invalid_content">The message content is not allowed to be sent!</string>
    <string name="error_send_not_in_the_group">You already were not in the group</string>
    <string name="is_down_please_wait">Downloading video, please try again later</string>
    <string name="Download_the_pictures_new">Download the pictures:</string>
    <string name="Download_the_pictures">Download the pictures: 0%</string>
    <string name="Network_error">Network error</string>
    <string name="please_check">key validation error!Please on AndroidManifest.xml file check the key set</string>
    <string name="location_message">The location information</string>
    <string name="Making_sure_your_location">Making sure your location..</string>
    <string name="no_more_messages">no more messages</string>
    <string name="search_header">Search</string>
    <string name="select_contacts">Select the contact</string>
    <string name="confirm_forward_to">Confirm to forward to：%1$s ?</string>
    <string name="unable_to_get_loaction">Unable to get to your location information!</string>
    <string name="not_connect_to_server">Not connect to server, please try again later</string>
    <string name="recording_video">Record video</string>
    <string name="temporary_does_not">Currently the video size greater than 10M is not supported!</string>
    <string name="Video_footage">Video record</string>
    <string name="sd_card_does_not_exist">"SD card does not exist, can't take pictures"</string>
    <string name="cant_find_pictures">"Can't find pictures"</string>
    <string name="File_does_not_exist">File does not exist</string>
    <string name="The_file_is_not_greater_than_10_m">The file is not greater than 10 m</string>
    <string name="Whether_to_empty_all_chats">Clear all messages?</string>
    <string name="Send_voice_need_sdcard_support">Send voice need sdcard support</string>
    <string name="Recording_without_permission">Recording without permission</string>
    <string name="The_recording_time_is_too_short">The recording time is too short</string>
    <string name="gorup_not_found">Can not find this group</string>
    <string name="group_id">Group ID</string>
    <string name="Empty_the_chat_record">Clear conversation</string>
</resources>