<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/x72"
        android:background="@color/bg_white" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_fragment_base_chile_title_zxdt"
                style="@style/fragment_child_top_title_text"
                android:text="@string/new_dynamic_title_name" />

            <View
                style="@style/vertical_line_style"
                android:layout_marginBottom="@dimen/y20"
                android:layout_marginTop="@dimen/y20" />

            <TextView
                android:id="@+id/tv_fragment_base_chile_title_zrdt"
                style="@style/fragment_child_top_title_text"
                android:text="@string/hot_dynamic_title_name" />

            <View
                style="@style/vertical_line_style"
                android:layout_marginBottom="@dimen/y20"
                android:layout_marginTop="@dimen/y20" />

            <TextView
                android:id="@+id/tv_fragment_base_chile_title_pyq"
                style="@style/fragment_child_top_title_text"
                android:text="@string/friends_title_name" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/y1"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/iv_fragment_base_chile_title_zxdt"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/bg_app_line"
                 />

            <ImageView
                android:id="@+id/iv_fragment_base_chile_title_zrdt"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/bg_app_line"
                 />

            <ImageView
                android:id="@+id/iv_fragment_base_chile_title_pyq"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/bg_app_line"
                 />
        </LinearLayout>
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/fl_fragment_base_chile_title_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
    </FrameLayout>

</LinearLayout>