<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@color/bg_grey">

    <RelativeLayout
        android:id="@+id/rl_item_speek"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y180"
        android:paddingLeft="@dimen/x20"
         android:background="@color/bg_white"
        android:paddingRight="@dimen/x20"
        android:layout_marginBottom="@dimen/x20"
        android:paddingTop="@dimen/y20" >

        <TextView
            android:id="@+id/tv_item_voice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/text_voice"
            android:textColor="@color/title_word_black"
            android:textSize="@dimen/x32" />

        <TextView
            android:id="@+id/tv_item_voice_hite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_item_voice"
            android:layout_marginTop="@dimen/y10"
            android:text="@string/text_voice_hite"
            android:textColor="@color/word_greyblack"
            android:textSize="@dimen/x32"
            android:visibility="visible" />

        <LinearLayout
            android:id="@+id/ll_item_voice_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_item_voice"
            android:layout_marginTop="@dimen/y15"
            android:orientation="horizontal"
            android:visibility="gone" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tv_item_voice_show_length"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_voice_shape"
                    android:drawableLeft="@drawable/suona_right"
                    android:paddingBottom="@dimen/y10"
                    android:paddingLeft="@dimen/x20"
                    android:paddingRight="@dimen/x200"
                    android:paddingTop="@dimen/y10" />

                <TextView
                    android:id="@+id/tv_item_voice_show_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/x20"
                    android:text="@string/text_duration"
                    android:textColor="@color/word_black"
                    android:textSize="@dimen/x32" />
            </LinearLayout>

            <ImageView
                android:id="@+id/iv_item_voice_icon_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/x15"
                android:src="@drawable/delete_icon" />
        </LinearLayout>
    </RelativeLayout>

</FrameLayout>